--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <!-- aos -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <div class="wrap">
@@ -39,7 +57,7 @@
                         <h3 class="txt-box">TAEHYUN<span>.port</span></h3>
                     </a>
                 </div>
-                <div class="nav-opener bl"><a href="#none">MENU</a><a href="#">back</a></div>
+                <div class="nav-opener bl"><a href="#none">MENU</a><a href="#">BACK</a></div>
             </div>
         </header>
         <nav class="menu">
@@ -169,29 +187,26 @@
                                         <div class="skills">
                                             <p>PHOTOSHOP / ILLUSTRATOR</p>
                                             <span>사진 보정 및 로고, 배너, 아이콘 등의 디자인 작업을 할
-                                            수 있습니다.<br />XD를 활용하여 웹 사이트의 시안과
-                                            프로토타입 제작이 가능합니다.</span>
+                                            수 있으며<br />GTQ1급 자격증을 보유하고 있습니다.</span>
                                         </div>
                                         <div class="skills">
                                             <p>HTML / CSS</p>
                                             <span
-                                            >콘텐츠 내용에 알맞은 시맨틱 태그를 사용하여 코드를
-                                            작성합니다<br />웹 표준 및 웹 접근성을 준수하여 반응형
-                                            레이아웃을 제작할 수 있습니다.</span>
+                                            >콘텐츠에 알맞는 시맨틱 태그를 사용하며 유지보수를 생각한 코드 작성을 합니다.
+                                            <br />웹 반응형 레이아웃을 제작할 수 있습니다.</span>
                                         </div>
                                         <div class="skills">
                                             <p>JAVASCRIPT / JQUERY</p>
                                             <span
-                                            >자바스크립트 ES6문법을 이해하고 활용할 수
-                                            있습니다.<br />제이쿼리를 활용하여 다양한 애니메이션과
+                                            >자바스크립트 문법을 이해하고 있습니다.<br />제이쿼리를 활용하여 다양한 애니메이션과
                                             기능을 구현할 수 있습니다.</span>
                                         </div>
                                         <div class="skills">
                                             <p>XD / FIGMA</p>
                                             <span
-                                            >원활한 협업을 위해 다양한 분야의 지식을 배우고
-                                            적용하며 공유합니다.<br />디자이너, 개발자와 가깝게
-                                            일하며, 함께 좋은 결과물을 만들고자 노력합니다.</span>
+                                            >원활한 협업을 할수 있도록 새로운 분야의 지식을 배우며 익히고 있습니다.
+                                            <br/>엑스디와 피그마를 이용해 꼼꼼한 마크업이 가능합니다.</span>
+
                                         </div>
                                     </div>
                                 </div>
@@ -251,7 +266,7 @@
                                     <img class="back-image" src="./img/work-sejong-bg2.jpg" alt="배경이미지" />
                                     <img class="ctr-image" src="./img/work-sejong.jpg" alt="포폴사이트 이미지" />
                                     <div class="expl">
-                                        <p><span>제작 스킬</span> Fullpage.js를 사용한 풀페이지, 웹 반응형 다지인, lottie.js 활용 애니메이션</p>
+                                        <p><span>제작 스킬</span> Fullpage.js, lottie.js, Aos.js, 웹 반응형 다지인</p>
                                         <p><span>참여도</span> 퍼블리싱100%, 디자인100%</p>
                                         <p><span>작업기간</span> 10일</p>
                                     </div>
@@ -271,7 +286,7 @@
                                     <img class="back-image" src="./img/work-fnc-bg2.jpg" alt="배경이미지" />
                                     <img class="ctr-image" src="./img/work-fnc.jpg" alt="포폴사이트 이미지" />
                                     <div class="expl">
-                                        <p><span>제작 스킬</span> 가로스크롤 플러그인 활용, Swiper 커스터마이징 디자인, 반응형 디자인</p>
+                                        <p><span>제작 스킬</span> Skrollr.js, Swiper.js, Aos.js, 웹 반응형 디자인</p>
                                         <p><span>참여도</span> 퍼블리싱100%, 디자인100%</p>
                                         <p><span>작업기간</span> 14일</p>
                                     </div>
@@ -291,7 +306,7 @@
                                     <img class="back-image" src="./img/work-ikea-bg2.jpg" alt="배경이미지" />
                                     <img class="ctr-image" src="./img/work-ikea.jpg" alt="포폴사이트 이미지" />
                                     <div class="expl">
-                                        <p><span>제작 스킬</span> javascript를 활용한 애니메이션, 반응형 디자인</p>
+                                        <p><span>제작 스킬</span> Swiper.js, Aos.js, 웹 반응형 디자인</p>
                                         <p><span>참여도</span> 퍼블리싱100%, 디자인100%</p>
                                         <p><span>작업기간</span> 14일</p>
                                     </div>
