--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <h3 class="txt-box">TAEHYUN<span>.port</span></h3>
                     </a>
                 </div>
-                <div class="nav-opener bl"><a href="#none">MENU</a><a href="#">BACK</a></div>
+                <div class="nav-opener bl"><a href="#none">MENU</a><a href="#none">BACK</a></div>
             </div>
         </header>
         <nav class="menu">
@@ -77,10 +77,10 @@
                     <div class="work-list">
                         <h3>MY WORK</h3>
                         <ul>
-                            <li class="bl"><a href="#">SEJONG CENTER</a></li>
-                            <li class="bl"><a href="#">FNC ENTERTAINMENT</a></li>
-                            <li class="bl"><a href="#">IKEA STORE</a></li>
-                            <li class="bl"><a href="#">TAEHYUN'S PORT SITE</a></li>
+                            <li class="bl"><a href="#https://hyountape00.github.io" target="_blank">SEJONG CENTER</a></li>
+                            <li class="bl"><a href="https://hyountape00.github.io/FNC-entertainment" target="_blank">FNC ENTERTAINMENT</a></li>
+                            <li class="bl"><a href="#https://hyountape00.github.io/ikea" target="_blank">IKEA STORE</a></li>
+                            <li class="bl"><a href="#" target="_blank">TAEHYUN'S PORT SITE</a></li>
                         </ul>
                     </div>
                 </div>
