--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="work-list">
                         <h3>MY WORK</h3>
                         <ul>
-                            <li class="bl"><a href="#https://hyountape00.github.io" target="_blank">SEJONG CENTER</a></li>
+                            <li class="bl"><a href="#https://hyountape00.github.io/sejongcenter/" target="_blank">SEJONG CENTER</a></li>
                             <li class="bl"><a href="https://hyountape00.github.io/FNC-entertainment" target="_blank">FNC ENTERTAINMENT</a></li>
                             <li class="bl"><a href="#https://hyountape00.github.io/ikea" target="_blank">IKEA STORE</a></li>
                             <li class="bl"><a href="#" target="_blank">TAEHYUN'S PORT SITE</a></li>
